...
        android:textSize="12sp"
        android:textColor="@color/TextDarkGrey"
        app:layout_constraintBottom_toTopOf="@id/heightline_diff_text"
        app:layout_constraintStart_toStartOf="parent" />

    <com.uu_uce.views.Menu
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="@+id/customMap"
        app:layout_constraintEnd_toEndOf="parent"
        app:elevation="6dp"
        android:elevation="6dp">
...
            android:background="@color/Flirtatious"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="@string/allpins_menuimage_description">

            <ImageView
                android:id="@+id/dragButton"
                android:textAllCaps="false"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:clickable="false"
                android:contentDescription="@string/menu_button_description"
...
            android:id="@+id/toggle_layer_scroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/dragBar">

            <LinearLayout
                android:id="@+id/toggle_layer_layout"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>

        </HorizontalScrollView>
...
            android:layout_height="3dp"
            android:layout_below="@+id/toggle_layer_scroll"
            android:layout_marginTop="0dp"
            android:background="@color/Flirtatious" />

        <LinearLayout
            android:id="@+id/lower_menu_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/sepparator"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/allpins_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp">

                <ImageView
                    android:id="@+id/allpins_image"
...
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/allpins_image"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/fieldbook_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp">

                <ImageView
                    android:id="@+id/fieldbook_image"
...
