<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fieldbook.FieldbookHomeFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/fieldbook_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/fieldbook_recyclerview_item"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fieldbook_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:backgroundTint="@color/colorUU2"
        android:src="@drawable/ic_sprite_add_white" />

</FrameLayout>