...
            android:contentDescription="@string/allpins_sortbutton_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_sprite_allpins_sortpins" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/allpins_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="15dp"
            android:layout_marginTop="15dp"
            android:scrollbars="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
...
