<resources xmlns:tools="http://schemas.android.com/tools">
    <!--General-->
    <string name="app_name">UCE</string>
    <string name="title_activity_settings">Settings</string>
    <string name="progress_popup_progress">Progress</string>
    <string name="positive_button_text">Yes</string>
    <string name="negative_button_text">No</string>
    <string name="cancel_button">Cancel</string>
    <string name="delete_popup_title">Delete</string>
    <string name="zip_download_completed">Download completed, unpacking</string>
    <string name="zip_unpack_completed">Unpacking completed</string>
    <string name="zip_unpacking_failed">Unpacking failed</string>
    <string name="download_failed">Download failed</string>
    <string name="location_unavailable">Location not available</string>

    <!--GeoMap-->
    <string name="geomap_download_warning_head">Streaming is unavailable</string>
    <string name="geomap_download_warning_body">Streaming maps is currently unsupported, to use the maps supplied by your organization you will have to download them. Would you like to download the maps now?</string>
    <string name="geomap_maps_download_instructions">Maps can be manually downloaded from settings</string>
    <string name="geomap_pins_download_instructions">Pins could not be updated, this can be done manually from settings</string>
    <string name="geomap_heightline_diff_text">%1$dm</string>
    <string name="geomap_scale_text">%1$d%2$s</string>
    <string name="geomap_default_distance">0m</string>
    <string name="merged_pin_name">Choose a pin to open</string>

    <!--AllPins-->
    <string name="allpins_menuimage_description">Image for pins menu button</string>
    <string name="allpins_checkmark_description">Checkmark displaying if a pin is done</string>
    <string name="allpins_topbar_title">Pins</string>
    <string name="allpins_sorting_title_az">Title a-z</string>
    <string name="allpins_sorting_title_za">Title z-a</string>
    <string name="allpins_sorting_difficulty_easyhard">Difficulty easy-hard</string>
    <string name="allpins_sorting_difficulty_hardeasy">Difficulty hard-easy</string>
    <string name="allpins_sorting_type_az">Type a-z</string>
    <string name="allpins_sorting_type_za">Type z-a</string>
    <string name="allpins_sort_popup_title">Sort by:</string>
    <string name="allpins_sortbutton_description">Image button for sorting pins</string>

    <!--Pins-->
    <string name="pin_close">Close</string>
    <string name="pin_finish">Finish</string>
    <string name="pin_title">Pin Title</string>
    <string name="pin_coordinates">Pin coordinates</string>
    <string name="pin_video_title_placeholder">Video title</string>
    <string name="pin_quiz_result_image_description">Image of mascot with emotion matching quiz result</string>
    <string name="pin_quiz_result_placeholder">QUIZRESULT</string>
    <string name="pin_quiz_complete_text_placeholder">CUSTOMTEXT</string>
    <string name="pin_quiz_reopen_button_success">See Answers</string>
    <string name="pin_quiz_reopen_button_fail">Try Again</string>
    <string name="pin_type_image_descripition">Image showing the type of the pin</string>
    <string name="pin_quiz_success_head">Quiz completed</string>
    <string name="pin_quiz_success_body" tools:ignore="PluralsCandidate">Congratulations! You completed the "%1$s" quiz with %2$d out of %3$d points.</string>
    <string name="pin_quiz_fail_head">Quiz failed!</string>
    <string name="pin_quiz_fail_body">Oh no… You did not get enough points to complete this quiz. Don\'t worry though, you can try again at any time.</string>
    <string name="pin_reward_text_placeholder">REWARD</string>
    <string name="pin_reward_string">+%1$d</string>
    <string name="pin_points_logo_description">Logo for points</string>
    <string name="pin_close_warning_head">Closing Pin</string>
    <string name="pin_close_warning_body">Are you sure you want to close pin? All progress will be lost.</string>
    <string name="pin_missing_answer_message">Some questions still lack answers</string>
    <string name="pin_image_title_placeholder">image title</string>

    <!--Fieldbook-->
    <string name="fieldbook_date_time_text"><![CDATA[Date & Time]]></string>
    <string name="fieldbook_add_button_text">Save Pin</string>
    <string name="fieldbook_coordinates_text">Pin coordinates</string>
    <string name="fieldbook_pin_title_placeholder">Title</string>
    <string name="fieldbook_title_hint">Title</string>
    <string name="fieldbook_default_id">#000</string>
    <string name="fieldbook_main_title">Fieldbook</string>
    <string name="fieldbook_map_title">Pinmap</string>
    <!--TODO: implement route <string name="fieldbook_route_title">Route</string>-->
    <string name="fieldbook_edit_content_button">Edit</string>
    <string name="fieldbook_add_video_description">Add video block to pin</string>
    <string name="fieldbook_video_button">Video</string>
    <string name="fieldbook_text_button">Text</string>
    <string name="fieldbook_add_text_description">Add text block to pin</string>
    <string name="fieldbook_add_image_description">Add image block to pin</string>
    <string name="fieldbook_image_button">Image</string>
    <string name="fieldbook_pindeletion_popup_text">Are you sure you want to delete this entry?</string>
    <string name="fieldbook_addpin_button_description">Button for adding new fieldbook pin</string>
    <string name="fieldbook_topbar_title">My Fieldbook</string>
    <string name="fieldbook_mediaselection_failed">Failed to select media</string>

    <!--Editor-->
    <string name="editor_topbar_title">Edit pins</string>
    <string name="editor_delete_block">Delete</string>
    <string name="editor_cancel_edit">Cancel</string>
    <string name="editor_edit_block">Edit</string>
    <string name="editor_edit_popup_title">Change content</string>
    <string name="editor_moveup">Move up</string>
    <string name="editor_movedown">Move down</string>
    <string name="editor_imageselection_gallery">Choose from gallery</string>
    <string name="editor_imageselection_camera">Take Photo</string>
    <string name="editor_imageselection_popup_title">Add an image</string>
    <string name="editor_videoselection_gallery">Choose from gallery</string>
    <string name="editor_videoselection_camera">Record Video</string>
    <string name="editor_videoselection_popup_title">Add a video</string>

    <!--Menu-->
    <string name="menu_bar_placeholder_text">Menu Item</string>
    <string name="menu_bar_backbutton_description">Back Button</string>
    <string name="menu_allpins_button_text">Pins</string>
    <string name="menu_fieldbook_button_text">My fieldbook</string>
    <string name="menu_button_description">Image showing what clicking the menu will do</string>
    <string name="menu_allpins_button_image">menu_allpins_button_image</string>
    <string name="menu_fieldbook_image_description">menu fieldbook image</string>
    <string name="menu_profile_button_text">Profile</string>
    <string name="menu_settings_button_text">Settings</string>
    <string name="menu_logout_text">Logout</string>

    <!--Settings-->
    <string name="settings_complete_range">Complete range</string>
    <string name="settings_pin_size">Pin Size</string>
    <string name="settings_networkdownload">Enable downloads on mobile data</string>
    <string name="settings_download_maps">Download maps</string>
    <string name="settings_download_button_text">Download</string>
    <string name="settings_mobiledata_warning_head">Enabling mobile data</string>
    <string name="settings_mobiledata_warning_body">Are you sure you want to enable downloading over mobile data? This may lead to significant amounts of data being used.</string>
    <string name="settings_zip_download_complete">Download completed, unpacking</string>
    <string name="settings_zip_unpacked">Unpacking completed</string>
    <string name="settings_zip_not_unpacked">Unpacking failed</string>
    <string name="settings_redownload_map_head">Maps already downloaded</string>
    <string name="settings_redownload_map_body">Are you sure you want to download the maps again?</string>
    <string name="settings_delete_maps_warning_head">Deleting maps</string>
    <string name="settings_delete_maps_warning_body">Are you sure you want to delete the maps?</string>
    <string name="settings_delete_content_warning_head">Deleting content</string>
    <string name="settings_delete_content_warning_body">Are you sure you want to delete all downloaded content?</string>
    <string name="settings_download_complete">Downloading completed</string>
    <string name="settings_delete_maps_button_text">Delete</string>
    <string name="settings_maps">Maps</string>
    <string name="settings_content">Content</string>
    <string name="settings_download_content_text">Download content</string>
    <string name="settings_accessibility">Accessibility</string>
    <string name="settings_map_deleted_text">Maps deleted</string>
    <string name="settings_content_deleted_text">Content deleted</string>
    <string name="settings_maps_storage">Storage used for maps: </string>
    <string name="settings_content_storage">Storage used for content: </string>
    <string name="settings_darkmode_switch_text">Dark mode</string>
    <string name="settings_pins_settings">Pins</string>
    <string name="settings_download_pins">Update pins</string>
    <string name="settings_pins_downloaded">Pins updated</string>
    <string name="settings_pins_download_button_text">Update</string>
    <string name="settings_permissions">Permissions</string>
    <string name="settings_queryfail">query failed</string>

    <!--Profile-->
    <string name="profile_user_name">User name</string>
    <string name="profile_orginization_image_description">The logo of the orginization that this person belongs to</string>
    <string name="profile_organization_name">Organization name</string>
    <string name="profile_badges">Badges</string>
    <string name="profile_achievements">Achievements</string>
    <string name="profile_statistics">Statistics</string>
    <string name="profile_wip_image">wip image</string>
    <string name="profile_points_placeholder">POINTS</string>

    <!--Login-->
    <string name="login_app_name">Utrecht \nCompanion to the Earth</string>
    <string name="login_text">Please sign in to the app by using your username and password.</string>
    <string name="login_username_hint">Username</string>
    <string name="login_password_hint">Password</string>
    <string name="login_app_logo_description">App logo</string>
    <string name="login_nocredentials_message">Please enter a username and password</string>
    <string name="login_nousername_message">Please enter a username</string>
    <string name="login_nopassword_message">Please enter a password</string>
    <string name="login_wrongcredentials_message">Incorrect username or password</string>
    <string name="login_signin_button_text">Sign In</string>
    <string name="login_successfullogin">Login successful</string>
    <string name="login_serverdown">Server connection is currently unavailable, try again later</string>
    <string name="login_use_offline">Use Offline</string>
    <string name="login_offline">Starting offline</string>

    <!--ContentServices-->
    <string name="contentservices_nowifi_downloadblock">Enable wifi or allow network downloading</string>
    <string name="contentservices_downloading">Downloading</string>
    <string name="contentservices_noserver">No server found, try logging in again</string>

</resources>
