...
                android:layout_height="605dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@+id/popup_window_close_button"
                app:layout_constraintTop_toBottomOf="@+id/popup_window_title">

                <ScrollView
                    android:id="@+id/scroll_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:id="@+id/scrollLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                    </LinearLayout>
                </ScrollView>
...
